# advent-of-code

./: .gitignore  README.md  pyproject.toml  set_up_day.py
2015/1/: instructions.txt  run.py
2015/2/: instructions.txt  run.py
2015/3/: instructions.txt  run.py
2015/4/: instructions.txt  run.py
2015/5/: instructions.txt  run.py
2015/6/: instructions.txt  run.py
2015/7/: instructions.txt  run.py
2020/1/: instructions.txt  run.py
2020/10/: instructions.txt  run.py
2020/11/: instructions.txt  run.py
2020/12/: instructions.txt  run.py
2020/13/: mini_input.txt  run.py
2020/14/: instructions.txt  run.py
2020/15/: instructions.txt  run.py
2020/16/: mine.txt  rules.txt  run.py  tickets.txt
2020/2/: instructions.txt  run.py
2020/3/: instructions.txt  run.py
2020/4/: instructions.txt  run.py
2020/5/: instructions.txt  run.py
2020/6/: instructions.txt  run.py
2020/7/: instructions.txt  run.py
2020/8/: instructions.txt  run.py
2020/9/: instructions.txt  run.py
day-setup/: day-setup.py  templates.py
tests/year_2015/: day_01_test.py  day_02_test.py  day_03_test.py  day_04_test.py  day_05_test.py  day_06_test.py  day_07_test.py  day_08_test.py  day_09_test.py  day_10_test.py  day_11_test.py  day_12_test.py  day_13_test.py  day_14_test.py  day_15_test.py  day_16_test.py  day_17_test.py  day_18_test.py  day_19_test.py  day_1_test.py  day_20_test.py  day_21_test.py  day_2_test.py  day_3_test.py  day_4_test.py  day_5_test.py  day_6_test.py  day_7_test.py  day_8_test.py  day_9_test.py
tests/year_2022/: day_01_test.py  day_02_test.py  (+5 more)
(+38 files in other folders)
